# cemed-green-software

./: .gitignore  README.md  _config.yml
.github/workflows/: jekyll-gh-pages.yml  python.yaml
code/: cemed-gen-test-base-24-Jun-18-41-44.csv
code/C++/: Makefile  chromosomes-analysis.txt  chromosomes.cc  cryptanalysis.cc  generate_chromosomes.cc  generate_chromosomes.hh
code/Python/: .gitignore  README.md  cryptanalysis-v2.py  cryptanalysis.py  pyproject.toml
code/Python/sacrypt/: __init__.py  __main__.py
code/Python/tests/: test_sacrypt.py
code/data/: 3romanzi.txt  cemed-gen-test-g++10-24-Jun-11-02-13.csv  cemed-gen-test1-21-Jun-14-28-32.csv  confessioni.txt  malavoglia.txt  manzoni_i_promessi_sposi_1840.txt  no-baseline-23-Mar-10-37-12.csv  plugged-intel-23-Mar-12-49-37.csv  plugged-intel-dram-23-Mar-13-36-49.csv  python-v1-28-Mar-07-23-59.csv  sacrypt-3romanzi-watts.json  sacrypt-3romanzi.json  sacrypt-js-bun-26-Mar-20-06-42.csv  sacrypt-js-node-26-Mar-20-05-09.csv  sacrypt-malavoglia-watts.json  sacrypt-malavoglia.json  sacrypt-manzoni-watts.json  sacrypt-manzoni_i_promessi_sposi_1840.json  sacrypt-node-26-Mar-19-32-16.csv  sleep-24-Mar-19-23-58.csv  test-1024.json  test-2048.json  test-23-Mar-09-04-38.csv  test-26-Mar-19-25-59.csv  test-512.json  (+1 more)
docs/: aristotle-and-sicily.md
paper/: green-computing-ppsn.tex  green-computing-wcci.tex  green-computing.tex
preso/: index.html  ingeniería.html  intro.html  promessi-spossi-frequency.html  promessi-spossi-frequency.md  sac25.html  trabajo-1.html  trabajo-2.html  wcci26.html  ágil.html
(+10 files in other folders)
