[project]
name = "sacrypt"
version = "0.1.0"
description = "Cryptanalysis examples for SAC"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["temp"]

[project.scripts]
sacrypt = "sacrypt:main"
